--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+spring.application.name=spring-security
 
+#spring.security.user.name=admin
+#spring.security.user.password=default_password
+
+spring.h2.console.enabled=true
