--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ spring.application.name=spring-security
 #spring.security.user.name=admin
 #spring.security.user.password=default_password
 
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
