--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,14 @@ spring.application.name=spring-security
 #spring.security.user.password=default_password
 
 #properties for JPA authentication using MySql
-#spring.datasource.url=jdbc:mysql://localhost:3306/users
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-spring.ldap.embedded.port=8389
-spring.ldap.embedded.ldif=classpath:ldap-data.ldif
-spring.ldap.embedded.base-dn=dc=springframework,dc=org
+#properties for LDAP authentication
+#spring.ldap.embedded.port=8389
+#spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+#spring.ldap.embedded.base-dn=dc=springframework,dc=org
